# email-sorting-openenv

./: Dockerfile  Dockerfile.docx  Dockerfile.txt  README.md  app.py  env.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
