[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-sorting-openenv"
version = "1.0.0"
description = "Real-world email sorting OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
